Revert "Merge remote-tracking branch 'upstream/main' into OAUTH2"
This reverts commit 6572fccf5307f4af9a314ef9c4ed677889806efe, reversing
changes made to 9717288dac99360993a235158abd0ff413429ca1.